Ref #104352 - Canteen meu : fix picto visibility with setimetout + error for empty icon in legend

--- a/assets/sass/rennes-hugo/blocks/_canteen-menu.sass
+++ b/assets/sass/rennes-hugo/blocks/_canteen-menu.sass
@@ -13,4 +13,5 @@
       flex-wrap: wrap
       column-gap: $spacing-1
       margin: 0
+      padding: 0
       list-style: none
